--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "mdbreact": "^4.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "0.9.5",
+    "redux": "^4.0.1",
     "semantic-ui": "^2.4.2",
     "semantic-ui-react": "^0.87.1"
   },
