--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "0.9.5",
+    "react-timeout": "^1.2.0",
     "redux": "^4.0.1",
     "semantic-ui": "^2.4.2",
     "semantic-ui-react": "^0.87.1"
