--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "0.9.5",
+    "react-spinners": "^0.5.4",
     "react-timeout": "^1.2.0",
     "redux": "^4.0.1",
     "semantic-ui": "^2.4.2",
