--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
+    "react-facebook": "^8.0.4",
     "react-progress-button": "^5.1.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "0.9.5",
     "react-share": "^3.0.0",
+    "react-sharingbuttons": "^1.0.0",
     "react-spinners": "^0.5.4",
     "react-timeout": "^1.2.0",
     "react-twitter-embed": "^2.0.8",
